<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="388dp"
        android:layout_height="390dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/icget"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy_on_you"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toTopOf="@+id/tv_SubSplash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/tv_SubSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:padding="5dp"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="4dp"
        android:text="@string/sub_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/btn_GetStarted"
        android:layout_width="288dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_greenbtn"
        android:fontFamily="@font/montserrat"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash"
        app:layout_constraintVertical_bias="0.954" />


</androidx.constraintlayout.widget.ConstraintLayout>