<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    tools:context=".FeedbackActivity">


    <ImageView
        android:id="@+id/iv_Emoji"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_marginTop="148dp"
        android:background="#211D44"
        android:scaleType="centerCrop"
        android:src="@drawable/threestar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_feedbacklayout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Emoji">

        <TextView
            android:id="@+id/tv_Rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/rate_this_service"
            android:textAlignment="center"
            android:textColor="#7E7E7E"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/rb_Stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:numStars="5"
            android:progressTint="#FFDF00"
            android:rating="3"
            android:secondaryProgressTint="#FFDF00"
            android:stepSize="1" />

        <TextView
            android:id="@+id/tv_ResultRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/three_star"
            android:textColor="#7E7E7E"
            android:textFontWeight="600"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_feedbackbtn"
        android:text="@string/give_feedback"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>